added keys to env file

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT = 8000
+HOST = "biakfwiofa7yemdy17zq-mysql.services.clever-cloud.com"
+USER = "uesoudpmclkgn0mz"
+PASSWORD = "PMjkCIZyB4HjgCL8Qu1b"
+DATABASE = "biakfwiofa7yemdy17zq"
+MYSQL_PORT = 3306
